Fixed hello world

--- a/web/hello.html
+++ b/web/hello.html
@@ -9,7 +9,7 @@
 
 <h1> Hello world </h1>
 
-<p> CS 313 | Web Engineering II (Spring 2020) </p>
+<p> CS 313 | Web Engineering II (Spring 2020) by Jose Paz</p>
 </body>
 
 </html>
