--- a/web/hello.html
+++ b/web/hello.html
@@ -10,6 +10,9 @@
 <h1> Hello world </h1>
 
 <p> CS 313 | Web Engineering II (Spring 2020) by Jose Paz.</p>
+
+<p> Thank you for stopping by, see you soon.</p>
+
 </body>
 
 </html>
